Made author lists darker which resolves most contrast errors for acceccibility of the website

--- a/layouts/partials/pub-list-2.html
+++ b/layouts/partials/pub-list-2.html
@@ -11,10 +11,10 @@
                 {{ .Title }}
               </a>
             </h1>
-            <div class="mb0 f5">
+            <div class="mb0 near-black f5">
               {{ partial "authorList.html" . }}
-	      <br>
-	      {{ partial "journal-link-bar.html" . }}
+            <br>
+              {{ partial "journal-link-bar.html" . }}
             </div>
             <div class='near-black'>
               <a href="{{.Permalink}}" class="ba b--moon-gray bg-light-gray br2 color-inherit dib f7 hover-bg-moon-gray link mt1 ph2 pv1" style="background-color:rgb(230,225,230)">Read More</a>
