--- a/layouts/partials/summary-with-image.html
+++ b/layouts/partials/summary-with-image.html
@@ -22,7 +22,7 @@
             </a>
 		
           </h1>
-            <div class="mb3 f5 gray">
+            <div class="mb3 f5 near-black">
               <div class="mv2"> {{ partial "authorList.html" . }} </div>
 	      <!-- <div class="mv2"> {{ dateFormat "01/2006" .Params.date }} </div> *}} -->
               <div class="mv2"> {{ partial "journal-link-bar.html" . }} </div>
