resolved some accesibility errors, removed blank header and increased contrast. Some links still have a contrast error but other links dont, seems a bit arbitrary

--- a/layouts/partials/summary-with-bubble-image.html
+++ b/layouts/partials/summary-with-bubble-image.html
@@ -22,7 +22,7 @@
           <a href="{{.Permalink}}" class="color-inherit dim link">
             {{ .Title }} <br>
             </a>
-	   <a class="gray f6">
+	   <a class=" f6">
             {{ .Params.tenure }} <br>
             </a>
 
