publication layout modified to display year in single view

--- a/layouts/partials/pub-list-2.html
+++ b/layouts/partials/pub-list-2.html
@@ -6,8 +6,8 @@
       {{ range $section }}
         <div class="bb b--black-10 relative w-100 mb2 nested-copy-line-height" style="background-color:rgb(252,251,248)">
           <div class="ph3 pv2 gray overflow-hidden">
-            <h1 class="f4 near-black mb0">
-   [{{ substr .Date 0 4 }}]
+            <h1 class="f4 black mb0">
+   		[{{ substr .Date 0 4 }}]
 	<a href="{{ .Permalink }}" class="link black dim">
                 {{ .Title }}
               </a>
