--- a/layouts/partials/summary-with-image.html
+++ b/layouts/partials/summary-with-image.html
@@ -36,7 +36,7 @@
           {{- .Content -}}
         </div>
           {{ end }}
-          <a href="{{.Permalink}}" class="ba b--moon-gray bg-light-gray br2 color-inherit dib f7 hover-bg-moon-gray link mt2 ph2 pv1" style="background-color:rgb(214,208,214)">{{ $.Param "read_more_copy" | default (i18n "readMore") }}</a>
+          <a href="{{.Permalink}}" class="ba b--moon-gray bg-white-30 br2 color-inherit dib f7 hover-bg-moon-gray link mt2 ph2 pv1">{{ $.Param "read_more_copy" | default (i18n "readMore") }}</a>
       </div>
     </div>
   </div>
