--- a/layouts/members/single.html
+++ b/layouts/members/single.html
@@ -40,8 +40,8 @@
           {{ if .Params.office }}
             <b>office:</b> {{ .Params.office }}<br/>
           {{ end }}
-          {{ if .Params.curentInstitution }}
-            <b>Current Institution:</b> {{ .Params.curentInstitution }}<br/>
+          {{ if .Params.currentInstitution }}
+            <b>Current Institution:</b> {{ .Params.currentInstitution }}<br/>
           {{ else if .Params.previousInstitution }}
             <b>Previous Institution:</b> {{ .Params.previousInstitution }}<br/>
           {{ end }}
