--- a/layouts/members/list.html
+++ b/layouts/members/list.html
@@ -33,8 +33,8 @@
 
 <h1> Group photo </h1>
 <figure>
-  <img src="\images\group\QITI_Niagara_pic_2019.jpg" alt="Niagara" class="left" style="display:block;max-width:90%">
-  <figcaption>(2019 summer) Lab outing in the Niagara region, Ontario.</figcaption>
+  <img src="\images\group\qsim-team-2023-Feb.jpg" alt="IQC-QITI" class="left" style="display:block;max-width:90%">
+  <figcaption>(2023 winter) Part of the QITI group at IQC</figcaption>
 </figure>
 
         <h1> Alumni </h1>
