new members sp2025. More group photos. Fixed preserving qubit publish news

--- a/layouts/members/list.html
+++ b/layouts/members/list.html
@@ -38,10 +38,23 @@
 		{{end}}
       {{ end }}	
 <hr>
-<h1> Group photo </h1>
+<h1> Group photos </h1>
+
+<figure>
+  <img src="\images\group\2024_blossom_group.jpg" alt="IQC-QITI" class="left" style="display:block;max-width:90%">
+  <figcaption>(2024 Spring) QITI Group during Cherry Blossom Season</figcaption>
+</figure>
 <figure>
   <img src="\images\group\qsim-team-2023-Feb.jpg" alt="IQC-QITI" class="left" style="display:block;max-width:90%">
-  <figcaption>(2023 winter) Part of the QITI group at IQC</figcaption>
+  <figcaption>(2023 winter) Part of the QITI group at a weekly meeting</figcaption>
+</figure>
+<figure>
+  <img src="\images\group\QITI_Niagara_pic_2019.jpg" alt="IQC-QITI" class="left" style="display:block;max-width:90%">
+  <figcaption>(Late 2019) QITI group visiting Niagara</figcaption>
+</figure>
+<figure>
+  <img src="\images\group\2018-GroupPhoto.jpg" alt="IQC-QITI" class="left" style="display:block;max-width:90%">
+  <figcaption>(2018) Original members of the QITI group</figcaption>
 </figure>
 
 
