megadump for september 2025
contains ali's defense, fixes to mu's profile, new group photo, Nikhil's sensor paper on arxiv

--- a/layouts/members/list.html
+++ b/layouts/members/list.html
@@ -41,6 +41,10 @@
 <h1> Group photos </h1>
 
 <figure>
+  <img src="\images\group\2025_front_of_QNC.JPG" alt="IQC-QITI" class="left" style="display:block;max-width:90%">
+  <figcaption>(2025 Fall) QITI Group in front of the Quantum Nano Center</figcaption>
+</figure>
+<figure>
   <img src="\images\group\2024_blossom_group.jpg" alt="IQC-QITI" class="left" style="display:block;max-width:90%">
   <figcaption>(2024 Spring) QITI Group during Cherry Blossom Season</figcaption>
 </figure>
